--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,145 @@
-.App {
-  text-align: center;
+
+
+body {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-color: rgb(253, 253, 253);
+    font-family: sans-serif;
+} 
+
+.container {
+    display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+main {
+    background-color: rgb(245, 245, 245);
+    width:100%;
+    overflow: hidden;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar {
+    background: rgb(0, 0, 0);
+    color: aliceblue;
+    height: 100vh;
+    max-width: 165px;
+    min-width: 50px;
+    transition: all 0.5s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.top_section {
+    display: flex;
+    align-items:center;
+    padding: 20px 15px;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+    font-size: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.bars {
+    display: flex;
+    font-size: 25px;
+    margin-left: 30px;
+}
+
+.link {
+    display: flex;
+    color: rgb(255, 255, 255);
+    padding: 5px 15px;
+    gap: 15px;
+    transition: all 0.5s;
+    text-decoration: none;
+}
+
+.link:hover {
+    background: rgb(158, 216, 253);
+    color: #000;
+    transition: all 0.5;
+}
+
+.active {
+    background: lightskyblue;
+    color: #000;
+}
+
+.icon {
+    scale: 1.1;
+}
+
+
+.icon, .link_text {
+    font-size: 20px;
+}
+
+.page-header {
+    text-align: center;
+    font-size: 100px;
+    font-weight: bolder;
+    margin-top: 20%;
+
+}
+
+
+@media screen and (max-width:720px) {
+    body {
+        background-color: rgb(84, 105, 105);
+    }
+    
+    .sidebar {
+        max-width: 140px;
+        min-width: 50px;
+    }
+
+    .logo {
+        font-size: 20px;
+    }
+
+    .icon {
+        padding-top: 8px;
+        height: 30px;
+        scale: 1.4;
+    }
+    
+    .icon, .link_text {
+        padding-top: 8px;
+        font-size: 16px;
+    }
+
+}
+
+@media screen and (max-width:450px) {
+    body {
+        background-color: rgb(47, 69, 69);
+    }
+    
+    .sidebar {
+        max-width: 110px;
+        min-width: 50px;
+    }
+
+    .logo {
+        font-size: 18px;
+    }
+
+    .icon {
+        padding-top: 8px;
+        height: 30px;
+        scale: 1.8;
+    }
+    
+    .icon, .link_text {
+        padding-top: 8px;
+        font-size: 13px;
+    }
+
+    .link {
+        gap: 10px;
+
+    }
+
+    .bars {
+        display: flex;
+        font-size: 22px;
+    }
 }
